# pancreatic_tumor_model

./: .gitignore  CLAUDE.md  CMakeLists.txt  HPC_WITHOUT_SLURM.md  HPC_WORKFLOW.md  Makefile  README.md  TODO.md  analyze_results.py  bdm.toml  compute_sensitivity_index.py  generate_param_sweep.py  params.json  params.txt  params_S1e3.json  params_S1e3_dt6h.json  params_S1e4.json  params_S1e4_dt4h.json  params_S1e4_dt6h.json  params_fast_test.json  params_treat_abr.json  params_treat_abr_S1e4.json  params_treat_abr_acd47.json  params_treat_abr_acd47_S1e4.json  params_treat_acd47.json  params_treat_acd47_S1e4.json  params_treat_gem.json  params_treat_gem_S1e4.json  populations.csv  run_complete_workflow.sh  run_local_sweep.sh  run_manual_hpc.sh  run_sensitivity_oat.py  submit_param_sweep_lsf.sh  submit_param_sweep_pbs.sh  submit_param_sweep_sge.sh  submit_param_sweep_slurm.sh  test_params.cc
analysis_example/: analysis_report.md  simulation_summary.csv
analysis_output/: analysis_report.md
configs/: params_S1e3.json  params_S1e3_dt24h.json  params_S1e4_E10x.json  params_S1e4_E10x_dt6h.json  params_S1e4_E10x_v4a.json  params_S1e4_E10x_v4e.json  params_S1e4_E10x_v5.json  params_S1e4_dt24h.json  params_csc.json  params_csc_S1e4.json  params_treat_abr.json  params_treat_abr_S1e4.json  params_treat_abr_acd47.json  params_treat_abr_acd47_S1e4.json  params_treat_abr_csc_S1e4.json  params_treat_acd47.json  params_treat_acd47_S1e4.json  params_treat_gem.json  params_treat_gem_S1e4.json
data-export/: C-Cells.csv  C-Cells_scaled.csv  C-Cells_scaled_global.csv  E-Cells.csv  E-Cells_scaled.csv  E-Cells_scaled_global.csv  H-Cells.csv  H-Cells_scaled.csv  H-Cells_scaled_global.csv  N-Cells.csv  N-Cells_scaled.csv  N-Cells_scaled_global.csv  P-Cells.csv  P-Cells_scaled.csv  P-Cells_scaled_global.csv  R-Cells.csv  R-Cells_scaled.csv  R-Cells_scaled_global.csv  calc-error.py  create-plots.py  fit_metrics_summary.csv  populations.csv
docs/: TODO.md  (+1 more)
(+102 files in other folders)
